overflow issue --2

--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ html {
 }
 body {
   /* define f family here */
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 h1,
 h2,
